--- a/index.html
+++ b/index.html
@@ -5,5 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Lorem, ipsum dolor.</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
+      accusamus cum nam reiciendis ipsam. Sit maiores quod odit quis temporibus
+      reprehenderit quas totam, laboriosam molestias consectetur ratione,
+      voluptate dolores mollitia!
+    </p>
+  </body>
 </html>
